# CryptoBot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  start-night.ps1  temp_local_signal_check.py
config/: default.toml  default.toml.bak_forcecheck  default.toml.pre_kxbtc15m_overhaul
data/: analysis_kxbtc15m.csv  settled_markets_kxbtc15m.csv
data/analysis_results/: analysis_a_summary.txt  analysis_b_summary.txt  data_quality_summary.txt  kxbtc15m_analysis_a_brti_basis.csv  kxbtc15m_analysis_a_distance.csv  kxbtc15m_analysis_a_hour_utc.csv  kxbtc15m_analysis_a_market_side.csv  kxbtc15m_analysis_a_trend.csv  kxbtc15m_analysis_a_tte.csv  kxbtc15m_analysis_a_tte_distance_heatmap.csv  kxbtc15m_analysis_a_vol.csv  kxbtc15m_analysis_a_volume.csv  kxbtc15m_analysis_b_sweep.csv  kxbtcd_analysis_a_trend.csv  (+17 more)
docs/: SYSTEM_GUIDE.md
scripts/: analyze_items_14_16.py  analyze_signal_quality.py  pull_settled_markets.py
tests/: test_backfill.py  test_backtest_empty.py  test_backtest_engine.py  test_bankroll_sim.py  test_cli.py  test_coinbase_features.py  test_comparison_report.py  test_dashboard.py  test_exit_rules.py  test_fills.py  test_fusion.py  test_gbm_threshold.py  test_hybrid_collector.py  test_kalshi_auth.py  test_kalshi_client.py  test_kalshi_normalization.py  test_latency_repricing.py  test_live_paper.py  test_real_execution.py  test_replay.py  test_replay_diagnostics.py  test_reporting.py  test_repricing_cache.py  test_repricing_target.py  test_risk_manager.py  test_settlements.py  test_signal_calibration.py  test_signal_engine.py  test_snapshot_store.py
(+60 files in other folders)
